namespace Nemeio.Core.Systems.Hid
{
    public interface ISystemModifierDelegate
    {
        bool IsModifierKey(string key);
    }
}
